# flaskdemo

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt
scripts/: run_dev_init_db.py  run_test coverage.py  run_test.py  run_test_coverage.py
src/app/: __init__.py  auth.py  blog.py  db.py
src/app/static/css/: style.css
src/app/templates/: base.html  layout.html
src/app/templates/auth/: login.html  register.html
src/app/templates/blog/: create.html  detail.html  index.html  update.html
src/app/templates/error/: 404.html  500.html
src/app/utils/: log.py
test/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_demo.py  test_factory.py  test_url.py
