[project]
name = "flaskdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
addopts = ''

testpaths = ['test']
python_files = 'test_*.py'
python_classes = 'Test*'
python_functions = 'test_*'

log_cli = true

log_level = 'INFO'
log_format = '%(asctime)s %(levelname)s %(message)s'
log_date_format = '%Y-%m-%d %H:%M:%S'

log_file = './logs/test.log'
log_file_mode = 'w'
log_file_level = 'INFO'
log_file_format = '%(asctime)s %(levelname)s %(filename)s:%(lineno)s:%(message)s'
log_file_date_format = '%Y-%m-%d %H:%M:%S'


markers = [
    "smoke",
    "regression",
    "integration",
    "end2end",
]

